sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: ';' expected but 'else' found.
			}else{ 
                         ^AlgBubbleSort3:16: error: Unmatched closing brace '}' ignored here
}
^